# tc-launcher-linux

./: LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
scripts/: build-appimage.sh
tclauncher/: __main__.py  auth.py  backend.py  config.py  desktop.py  mods.py  runner.py  verify.py  version.py
tclauncher/ui/: main_window.py  mods_dialog.py  server_dialog.py  settings_dialog.py  theme.py  workers.py
tests/: test_backend_timeouts.py  test_config_and_backend.py  test_desktop.py  test_logging_setup.py  test_primary_action.py  test_runner.py  test_verify_compat.py  test_worker_lifetime.py
